Update info posts

--- a/_posts/info/law/2016-06-05-Executive Order 229 1987.md
+++ b/_posts/info/law/2016-06-05-Executive Order 229 1987.md
@@ -19,11 +19,11 @@ related:
 
 Executive Order No. 229 titled Providing the Mechanism for the Implementation of the Comprehensive Agrarian Reform Program was signed by President Corazon C. Aquino on 22 July 22 1987.
 
-##### EXECUTIVE ORDER NO. 229
+##### Executive Order No. 229
 
-###### JULY 22, 1987
+###### July 22, 1987
 
-###### PROVIDING THE MECHANISMS FOR THE IMPLEMENTATION OF THE COMPREHENSIVE AGRARIAN REFORM PROGRAM
+###### Providing the Mechanisms for the Implementation of the Comprehensive Agrarian Reform Program
 
 WHEREAS, by virtue of Proclamation No. 131 dated July 22, 1987 the Comprehensive Agrarian Reform Program has been instituted;
 
@@ -33,9 +33,9 @@ WHEREAS, public hearings and consultations were held to determine appropriate me
 
 NOW, THEREFORE, I, CORAZON C. AQUINO, President of the Philippines by virtue of the powers vested in me by the Constitution, do hereby order:
 
-###### CHAPTER I
+## Chapter I
 
-###### COVERAGE
+## Coverage
 
 SECTION 1. Scope. The Comprehensive Agrarian Reform Program (CARP) shall cover, regardless of tenurial arrangement and commodity produce all public and private agricultural lands as provided in Proclamation No.13 dated July 22 , 1987, including whenever applicable in accordance with law other lands of the public domain suitable to agriculture.
 
@@ -47,9 +47,9 @@ SECTION 4. Compulsory Registration. Within one hundred eighty (18C days from the
 
 If the landowner fails to register within the prescribed period, the government shall base the valuation of his property for landowner compensation purposes on the City/Provincial Assessor’s value. Beginning with the quarter immediately following this registration, the real property tax payable shall be based on the abovementioned owner’s declaration of current fair market value.
 
-###### CHAPTER II
+## Chapter II
 
-###### PRIVATE LAND ACQUISITION
+## Private Land Acquisition
 
 SECTION 5. Procedure of Acquisition. After the land, landowners, and beneficiaries shall have been identified, the DAR shall publish its decision to acquire the land and notify the landowners thereof, together with the offer of the DAR to pay for the land as provided in Section 6 hereunder.
 
@@ -85,9 +85,9 @@ SECTION 7. Assistance to Landowners. Landowners affected by this Order shall be 
 
 (c) Marketing of LBP bonds.
 
-###### CHAPTER III
+## Chapter III
 
-###### LAND TRANSFER, UTILIZATION, AND SHARING
+## Land Transfer, Utilization, and Sharing
 
 SECTION 8. Voluntary Land Transfer. Landowners whose lands are subject to redistribution under this Order have the option of entering into a voluntary agreement for direct transfer of their lands to appropriate beneficiaries, under terms and conditions acceptable to both parties and subject to the approval of the DAR. The general guidelines for voluntary land transfer are:
 
@@ -117,9 +117,9 @@ SECTION 15. Distribution and Utilization of Public Lands. All alienable and disp
 
 SECTION 16. Production Sharing. Individuals or entities owning and/or operating under lease agricultural lands with gross sales in excess of Five Million Pesos (₱5 million) per annum are hereby mandated to execute a production sharing plan whereby at least two and one-half (2.5) percent of the gross sales from the production/cultivation of such lands are distributed as compensation to the farm workers over and above the compensation they currently receive, provided that such individuals or entities are not obligated to pay more than 100 percent of the regular and annual compensation of the farm workers.
 
-###### CHAPTER IV
+## Chapter IV
 
-###### IMPLEMENTING AND COORDINATING MECHANISMS
+## Implementing and Coordinating Mechanisms
 
 SECTION 17. Quasi-Judicial Powers of the DAR. The DAR is hereby vested with quasi-judicial powers to determine and adjudicate agrarian reform matters, and shall have exclusive original jurisdiction over all matters involving implementation of agrarian reform, except those falling under the exclusive original jurisdiction of the DENR and the Department of Agriculture (DA).
 
@@ -215,25 +215,25 @@ b. To mediate, conciliate or arbitrate agrarian conflicts and issues that are br
 
 c. To perform such other functions that the PARC, its Executive Committee, or the DAR Secretary may delegate from time to time.
 
-###### CHAPTER V
+## Chapter V
 
-###### FINANCING
+## Financing
 
 SECTION 20. Agrarian Reform Fund. As provided in Proclamation No. 131 dated July 22 , 1987, a special fund is created, known as The Agrarian Reform Fund, an initial amount of FIFTY BILLION PESOS (₱50 billion) to cover the estimated cost of the CARP from 1987 to 1992 which shall be sourced from the receipts of the sale of the assets of the Asset Privatization Trust (APT) and receipts of sale of ill-gotten wealth recovered through the Presidential Commission on Good Government and such other sources as government may deem appropriate. The amount collected and accruing to this special fund shall be considered automatically appropriated for the purpose authorized in this Order.
 
 SECTION 21. Supplemental Appropriations. The amount of TWO BILLION SEVEN HUNDRED MILLION PESOS (₱2.7 billion) is hereby appropriated to cover the supplemental requirements of the CARP for 1987, to be sourced from the receipts of the sale of ill-gotten wealth recovered through the Presidential Commission on Good Government and the proceeds from the sale of assets by the APT. The amount collected from these sources shall accrue to The Agrarian Reform Fund and shall likewise be considered automatically appropriated for the purpose authorized in this Order.
 
-###### CHAPTER VI
+## Chapter VI
 
-###### SANCTIONS
+## Sanctions
 
 SECTION 22. Permanent Disqualification. Persons, associations, or entities who prematurely enter the land to avail themselves of the rights and benefits hereunder, shall be permanently disqualified from receiving benefits and shall forfeit their rights hereunder.
 
 SECTION 23. Contempt. Persons, associations, or entities who willfully prevent or obstruct the implementation of the CARP shall be liable for contempt.
 
-###### CHAPTER VII
+## Chapter VII
 
-###### GENERAL PROVISIONS
+## General Provisions
 
 SECTION 24. Ancestral Lands. Within the framework of national unity and development, the rights of indigenous cultural communities to their ancestral lands are hereby protected to ensure their economic, social, and cultural well-being.
 
