--- a/_posts/info/law/2016-06-05-Republic Act 6657.md
+++ b/_posts/info/law/2016-06-05-Republic Act 6657.md
@@ -23,13 +23,13 @@ One of the major programs of CARP is Land Tenure Improvement, which seeks to has
 
 The legal basis for CARP is the Republic Act No. 6657 otherwise known as Comprehensive Agrarian Reform Law (CARL) signed by President Corazon C. Aquino on June 10, 1988. It is an act which aims to promote social justice and industrialization, providing the mechanism for its implementation, and for other purposes.
 
-##### REPUBLIC ACT NO. 6657
+##### Republic Act No. 6657
 
 ##### June 10, 1988
 
-###### AN ACT INSTITUTING A `COMPREHENSIVE AGRARIAN REFORM` PROGRAM TO PROMOTE SOCIAL JUSTICE AND INDUSTRIALIZATION, PROVIDING THE MECHANISM FOR ITS IMPLEMENTATION, AND FOR OTHER PURPOSES
+###### An Act Instituting a 'Comprehensive Agrarian Reform' Program to Promote Social Justice and Industrialization, Providing the Mechanism for its Implementation, and for Other Purposes
 
-## CHAPTER I
+## Chapter I
 
 ## Preliminary Chapter
 
@@ -79,7 +79,7 @@ It includes any controversy relating to compensation of lands acquired under thi
 
 (k) Cooperatives shall refer to organizations composed primarily of small agricultural producers, farmers, farmworkers, or other agrarian reform beneficiaries who voluntarily organize themselves for the purpose of pooling land, human, technological, financial or other economic resources, and operated on the principle of one member, one vote. A juridical person may be a member of a cooperative, with the same rights and duties as a natural person.
 
-## CHAPTER II
+## Chapter II
 
 ## Coverage
 
@@ -154,7 +154,7 @@ which shall hereafter manage the said lands for the worker-beneficiaries. If the
 longer exist, such areas shall automatically be subject to redistribution. The provisions of Section 32 of the Act, with regard to production-and incomesharing,
 shall apply to commercial farms.
 
-## CHAPTER III
+## Chapter III
 
 ## Improvement of Tenurial and Labor Relations
 
@@ -165,7 +165,7 @@ SECTION 13. Production-Sharing Plan. — Any enterprise adopting the scheme prov
 Nothing herein shall be construed to sanction the diminution of any benefits such as salaries, bonuses, leaves and working conditions granted to the employeebeneficiaries
 under existing laws, agreements, and voluntary practice by the enterprise, nor shall the enterprise and its employee-beneficiaries be prevented from entering into any agreement with terms more favorable to the latter.
 
-## CHAPTER IV
+## Chapter IV
 
 ## Registration
 
@@ -189,7 +189,7 @@ tenurial relationship;
 
 A copy of the registry or list of all potential CARP beneficiaries in the barangay shall be posted in the barangay hall, school or other public buildings in the barangay where it shall be open to inspection by the public at all reasonable hours.
 
-## CHAPTER V
+## Chapter V
 
 ## Land Acquisition
 
@@ -208,7 +208,7 @@ provisions hereof.
 
 (f) Any party who disagrees with the decision may bring the matter to the court of proper jurisdiction for final determination of just compensation.
 
-## CHAPTER VI
+## Chapter VI
 
 ## Compensation
 
@@ -256,7 +256,7 @@ SECTION 20. Voluntary Land Transfer. — Landowners of agricultural lands subjec
 
 SECTION 21. Payment of Compensation by Beneficiaries Under Voluntary Land Transfer. — Direct payments in cash or in kind may be by the farmer-beneficiary to the landowner under terms to be mutually agreed upon by both parties, which shall be binding upon them, upon registration with the approval by the DAR. Said approval shall be considered given, unless notice of disapproval is received by the farmer-beneficiary within thirty (30) days from the date of registration. In the event they cannot agree on the price of land, the procedure for compulsory acquisition as provided in Section 16 shall apply. The LBP shall extend financing to the beneficiaries for purposes of acquiring the land.
 
-## CHAPTER VII
+## Chapter VII
 
 ## Land Redistribution
 
@@ -274,7 +274,7 @@ SECTION 27. Transferability of Awarded Lands. — Lands acquired by  beneficiari
 
 SECTION 28. Standing Crops at the Time of Acquisition. — The  landowner shall retain his share of any standing crops unharvested at the time the  DAR shall take possession of the land under Section 16 of the Act, and shall be given  a reasonable time to harvest the same.
 
-## CHAPTER VIII
+## Chapter VIII
 
 ## Corporate Farms
 
@@ -290,7 +290,7 @@ SECTION 33. Payment of Shares of Cooperative or Association. — Shares of a coo
 
 SECTION 34. Valuation of Lands. — A valuation scheme for the land shall be formulated by the PARC, taking into account the factors enumerated in Section 17, in addition to the need to stimulate the growth of cooperatives and the objective of fostering responsible participation of the workers-beneficiaries in the creation of wealth. In the determination of price that is just not only to the individuals but to society as well, the PARC shall consult closely with the landowner and the workersbeneficiaries. In case of disagreement, the price as determined by the PARC, if accepted by the workers-beneficiaries, shall be followed, without prejudice to the landowner's right to petition the Special Agrarian Court to resolve the issue of valuation.
 
-## CHAPTER IX
+## Chapter IX
 
 ## Support Services
 
@@ -304,7 +304,7 @@ SECTION 38. Support Services to Landowners. — The PARC with the assistance of 
 
 SECTION 39. Land Consolidation. — The DAR shall carry out land consolidation projects to promote equal distribution of landholdings, to provide the needed infrastructures in agriculture, and to conserve soil fertility and prevent erosion.
 
-## CHAPTER X
+## Chapter X
 
 ## Special Areas of Concern
 
@@ -324,7 +324,7 @@ SECTION 40. Special Areas of Concern. — As an integral part of the Comprehensi
 
 (7) Agriculture Graduates. — Graduates of agricultural schools who are landless shall be assisted by the government, through the DAR, in their desire to own and till agricultural lands.
 
-## CHAPTER XI
+## Chapter XI
 
 ## Program Implementation
 
@@ -346,7 +346,7 @@ SECTION 48. Legal Assistance. — The BARC or any member thereof may, whenever n
 
 SECTION 49. Rules and Regulations. — The PARC and the DAR shall have the power to issue rules and regulations, whether substantive or procedural, to carry out the objects and purposes of this Act. Said rules shall take effect ten (10) days after publication in two (2) national newspapers of general circulation.  
 
-## CHAPTER XII
+## Chapter XII
 
 ## Administrative Adjudication  
 
@@ -358,7 +358,7 @@ SECTION 52. Frivolous Appeals. — To discourage frivolous or dilatory appeals f
 
 SECTION 53. Certification of the BARC. — The DAR shall not take cognizance of any agrarian dispute or controversy unless a certification from the BARC that the dispute has been submitted to it for mediation and conciliation without any success of settlement is presented: Provided, however, That if no certification is issued by the BARC within thirty (30) days after a matter or issue is submitted to it for mediation or conciliation the case or dispute may be brought before the PARC.
 
-## CHAPTER XIII
+## Chapter XIII
 
 ## Judicial Review  
 
@@ -378,7 +378,7 @@ SECTION 61. Procedure on Review. — Review by the Court of Appeals or the Supre
 
 SECTION 62. Preferential Attention in Courts. — All courts in the Philippines, both trial and appellate, shall give preferential attention to all cases arising from or in connection with the implementation of the provisions of this Act. All cases pending in court arising from or in connection with the implementation of this Act shall continue to be heard, tried and decided into their finality, notwithstanding the expiration of the ten-year period mentioned in Section 5 hereof.  
 
-## CHAPTER XIV
+## Chapter XIV
 
 ## Financing
 
@@ -386,7 +386,7 @@ SECTION 62. Preferential Attention in Courts. — All courts in the Philippines,
 
 SECTION 64. Financial Intermediary for the CARP. — The Land Bank of the Philippines shall be the financial intermediary for the CARP, and shall insure that the social justice objectives of the CARP shall enjoy a preference among its priorities.  
 
-## CHAPTER XV
+## Chapter XV
 
 ## General Provisions
 
