--- a/_posts/info/law/2016-06-05-Republic Act 8491.md
+++ b/_posts/info/law/2016-06-05-Republic Act 8491.md
@@ -20,9 +20,9 @@ related:
 
 Republic Act No. 8491 or otherwise known as the "Flag and Heraldic Code of the Philippines" was signed into law on 12 February 1998 by President Fidel V. Ramos.
 
-##### REPUBLIC ACT NO. 8491
+##### Republic Act No. 8491
 
-###### AN ACT PRESCRIBING THE CODE OF THE NATIONAL FLAG, ANTHEM, MOTTO, COAT-OF-ARMS AND OTHER HERALDIC ITEMS AND DEVICES OF THE PHILIPPINES.
+###### An Act Prescribing the Code of the National Flag, Anthem, Motto, Coat-of-Arms and Other Heraldic Items and Devices of the Philippines.
 
 Be it enacted by the Senate and Home of Representatives of the Philippines in Congress assembled:
 SECTION 1. Short Title — This act shall be known as the "Flag and Heraldic Code of the Philippines."
@@ -55,7 +55,7 @@ k. "Places of Frivolty" shall mean places of hilarity marked by or providing boi
 
 l. "Institute" shall mean the National Historical Institute.
 
-## CHAPTER 1
+## Chapter 1
 
 ## THE NATIONAL FLAG
 
@@ -257,7 +257,7 @@ i. To use, display or be part of any advertisement of infomercial; and
 
 j. To display the flag in front of buildings or offices occupied by aliens.
 
-## CHAPTER II
+## Chapter II
 
 ## THE NATIONAL ANTHEM
 
@@ -325,13 +325,13 @@ e. Other occasions as may be allowed by the Institute.
 
 SECTION 39. All officials and employees of the national and local governments, and any agencies or instrumentalities thereof, including government-owned or controlled corporations, privately-owned entities of offices displaying the national flag and government institutions of learning are hereby directed to comply strictly with the rules prescribed for the rendition of the anthem. Failure to observe the rules shall be a ground for administrative discipline.
 
-## CHAPTER III
+## Chapter III
 
 ## THE NATIONAL MOTTO
 
 SECTION 40. The national Motto shall be "MAKA-DIYOS, MAKA-TAO, MAKAKALIKASAN AT MAKABANSA."
 
-## CHAPTER IV
+## Chapter IV
 
 ## NATIONAL COAT-OF-ARMS
 
@@ -339,7 +339,7 @@ SECTION 41. The National Coat-of-Arms shall have:
 
 Paleways of two (2) pieces, azure and gules; a chief argent studded with three (3) mullets equidistant from each other; and, in point of honor, ovoid argent over all the sun rayonnant with eight minor lesser rays. Beneath shall be the scroll with the words "REPUBLIKA NG PILIPINAS," inscribed thereon.
 
-## CHAPTER V
+## Chapter V
 
 ## THE GREAT SEAL
 
@@ -349,7 +349,7 @@ The Great Seal shall bear the National Motto.
 
 SECTION 43. The Great Seal shall be affixed to or placed upon all commissions signed by the President and upon such other official documents and papers of the Republic of the Philippines as may be provided by law, or as may be required bv custom and usage. The President shall have custody of the Great Seal.
 
-## CHAPTER VI
+## Chapter VI
 
 ## OFFICIAL SEALS AND OTHER HERALDIC ITEMS AND DEVICES
 
@@ -361,9 +361,9 @@ SECTION 46. All government offices including the military are hereby ordered to 
 
 SECTION 47. No government official or employee shall accept any orders or decorations from any foreign government without the consent of Congress, and without the prior evaluation and documentation of such order or decoration by the Institute.
 
-## CHAPTER VII
+## Chapter VII
 
-## PENALTIES
+## Penalties
 
 SECTION 48. Failure or refusal to observe the provisions of this Act; and any violation of the corresponding rules and regulations issued by the Office of the President shall, after proper notice and hearing, be penalized by public censure which shall be published at least once in a newspaper of general circulation.
 
@@ -373,9 +373,9 @@ SECTION 49. The Department of Education, Culture and Sports (DECS) and the Commi
 
 SECTION 50. Any person or judicial entity which violates any of the provisions of this Act shall, upon conviction, be punished by a fine of not less than Five thousand pesos (5,000.00) not more than Twenty thousand pesos (P20,000.00), or by imprisonment for not more than one (1) year, or both such fine and imprisonment, at the discretion of the court: Provided, That for any second and additional offenses, both fine and imprisonment shall always be imposed: Provided, That in case the violation is commited by a juridical person, its President or Chief Executive Officer thereof shall be liable.
 
-## CHAPTER VIII
+## Chapter VIII
 
-## COMMON PROVISION
+## Common Provision
 
 SECTION 51. The Institute shall issue the necessary-rules and regulations to implement the provisions of this Act within ninety (90) days after effectivity. The Institute shall submit its rules and regulations to the Office of the President and the Congress of the Philippines.
 
