--- a/_posts/info/law/2016-06-05-Republic Act 9700.md
+++ b/_posts/info/law/2016-06-05-Republic Act 9700.md
@@ -21,11 +21,11 @@ related:
 
 The Comprehensive Agrarian Reform Program Extension with Reforms was signed by President Gloria Macapgal-Arroyo on 7 August 2009.
 
-##### REPUBLIC ACT NO. 9700
+##### Republic Act No. 9700
 
 ###### August 7, 2009
  
-###### AN ACT STRENGTHENING THE COMPREHENSIVE AGRARIAN REFORM PROGRAM (CARP), EXTENDING THE ACQUISITION AND DISTRIBUTION OF ALL  AGRICULTURAL LANDS, INSTITUTING NECESSARY REFORMS, AMENDING FOR THE PURPOSE CERTAIN PROVISIONS OF REPUBLIC ACT NO. 6657, OTHERWISE, KNOWN AS THE COMPREHENSIVE AGRARIAN REFORM LAW OF 1988, AS AMENDED, AND APPROPRIATING FUNDS THEREFOR
+###### An Act Strengthening the Comprehensive Agrarian Reform Program (CARP), Extending the Acquisition and Distribution of All Agricultural Lands, Instituting Necessary Reforms, Amending for the Purpose Certain Provisions of Republic Act No. 6657, Otherwise, Known as the Comprehensive Agrarian Reform Law of 1988, as Amended, and Appropriating Funds Therefor
 
 SECTION 1. Section 2 of Republic Act No. 6657, as amended, otherwise known as the Comprehensive Agrarian Reform Law of 1988, is hereby further amended to read as follows:
 
