--- a/_posts/info/law/2016-06-05-Republic Act 3019.md
+++ b/_posts/info/law/2016-06-05-Republic Act 3019.md
@@ -20,9 +20,9 @@ related:
 
 The Anti-Graft and Corrupt Practices Act approved on August 17, 1960 which aims to repress certain acts of public officers and private persons which constitute graft or corrupt practices.
 
-##### REPUBLIC ACT No. 3019
+##### Republic Act No. 3019
 
-###### ANTI-GRAFT AND CORRUPT PRACTICES ACT
+###### Anti-Graft and Corrupt Practices Act
 
 Section 1. Statement of policy. It is the policy of the Philippine Government, in line with the principle that a public office is a public trust, to repress certain acts of public officers and private persons alike which constitute graft or corrupt practices or which may lead thereto.
 
