Update formatting used for info posts

--- a/_posts/info/law/2016-06-05-Executive Order 229 1987.md
+++ b/_posts/info/law/2016-06-05-Executive Order 229 1987.md
@@ -21,9 +21,9 @@ Executive Order No. 229 titled Providing the Mechanism for the Implementation of
 
 ##### Executive Order No. 229
 
-###### July 22, 1987
+##### Providing the Mechanisms for the Implementation of the Comprehensive Agrarian Reform Program
 
-###### Providing the Mechanisms for the Implementation of the Comprehensive Agrarian Reform Program
+###### July 22, 1987
 
 WHEREAS, by virtue of Proclamation No. 131 dated July 22, 1987 the Comprehensive Agrarian Reform Program has been instituted;
 
