--- a/_posts/info/law/2016-06-05-Republic Act 10895.md
+++ b/_posts/info/law/2016-06-05-Republic Act 10895.md
@@ -21,7 +21,7 @@ An Act granting the Avocado Broadband Telecoms, Inc. a franchise to construct, i
 
 ##### Republic Act No. 10895
 
-###### An Act Granting the Avocado Broadband Telecoms, Inc. a Franchise to Construct, Install, Establish, Operate and Maintain Telecommunications Systems Throughout the Philippines
+##### An Act Granting the Avocado Broadband Telecoms, Inc. a Franchise to Construct, Install, Establish, Operate and Maintain Telecommunications Systems Throughout the Philippines
 
 Be it enacted by the Senate and House of Representatives of the Philippines in Congress assembled:
 
