--- a/_posts/info/law/2016-06-05-Republic Act 6657.md
+++ b/_posts/info/law/2016-06-05-Republic Act 6657.md
@@ -25,9 +25,9 @@ The legal basis for CARP is the Republic Act No. 6657 otherwise known as Compreh
 
 ##### Republic Act No. 6657
 
-##### June 10, 1988
+##### An Act Instituting a 'Comprehensive Agrarian Reform' Program to Promote Social Justice and Industrialization, Providing the Mechanism for its Implementation, and for Other Purposes
 
-###### An Act Instituting a 'Comprehensive Agrarian Reform' Program to Promote Social Justice and Industrialization, Providing the Mechanism for its Implementation, and for Other Purposes
+##### June 10, 1988
 
 ## Chapter I
 
