--- a/_posts/info/law/2016-06-05-Republic Act 7640.md
+++ b/_posts/info/law/2016-06-05-Republic Act 7640.md
@@ -22,7 +22,7 @@ Former President Fidel V. Ramos approved Republic Act No. 7640 on 9 December 199
 
 ##### Republic Act No. 7640
 
-###### An Act Constituting the Legislative-Executive Development Advisory Council
+##### An Act Constituting the Legislative-Executive Development Advisory Council
 
 SECTION 1. Declaration of Policy. --- It is the policy of the State to formulate after consultations with appropriate public agencies, the private sector, and local government units socioeconomic development programs taking into account the requirements of conservation and ecology and in accordance with its constitutional mandate to promote a more equitable distribution of opportunities, income, and wealth; a sustained increase in the amount of goods and services produced by the nation for the benefit of the people; an expanding productivity as the key to raising the quality of life for all, especially the under privileged.
 
