--- a/_posts/info/law/2016-06-05-Republic Act 8491.md
+++ b/_posts/info/law/2016-06-05-Republic Act 8491.md
@@ -22,7 +22,7 @@ Republic Act No. 8491 or otherwise known as the "Flag and Heraldic Code of the P
 
 ##### Republic Act No. 8491
 
-###### An Act Prescribing the Code of the National Flag, Anthem, Motto, Coat-of-Arms and Other Heraldic Items and Devices of the Philippines.
+##### An Act Prescribing the Code of the National Flag, Anthem, Motto, Coat-of-Arms and Other Heraldic Items and Devices of the Philippines.
 
 Be it enacted by the Senate and Home of Representatives of the Philippines in Congress assembled:
 SECTION 1. Short Title — This act shall be known as the "Flag and Heraldic Code of the Philippines."
