--- a/_posts/info/law/2016-06-05-Republic Act 9160.md
+++ b/_posts/info/law/2016-06-05-Republic Act 9160.md
@@ -22,7 +22,7 @@ Former President Gloria Macapagal-Arroyo approved Republic Act No. 9160 or the A
 
 ##### Republic Act No. 9160
 
-###### An Act Defining the Crime of Money Laundering, Providing Penalties Therefore and for Other Purposes
+##### An Act Defining the Crime of Money Laundering, Providing Penalties Therefore and for Other Purposes
 
 Be it enacted by the Senate and House of Representatives of the Philippines in Congress assembled:
 
