--- a/_posts/info/law/2016-06-05-Republic Act 9194.md
+++ b/_posts/info/law/2016-06-05-Republic Act 9194.md
@@ -22,7 +22,7 @@ Former President Glora Macapagal-Arroyo approved on 7 March 2003 the Act amendin
 
 ##### Republic Act No. 9194
 
-###### An Act Amending Republic Act No. 9160, Otherwise Known as the "Anti-Money Laundering Act of 2001"
+##### An Act Amending Republic Act No. 9160, Otherwise Known as the "Anti-Money Laundering Act of 2001"
 
 Be it enacted by the Senate and House of Representatives of the Philippines in Congress assembled:
 
